[gd_scene load_steps=4 format=3 uid="uid://3psyuukweuhh"]

[ext_resource type="Script" path="res://Escenas/Menu/menu.gd" id="1_14p33"]
[ext_resource type="AudioStream" uid="uid://b8wti220iewdq" path="res://sonidos/pantallaprincipal.mp3" id="2_x6frq"]
[ext_resource type="AudioStream" uid="uid://be5ei8etts8r8" path="res://sonidos/elecciondepantalla.mp3" id="3_5hdsg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_14p33")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 593.0
offset_top = 204.0
offset_right = 686.0
offset_bottom = 236.0
text = "Play"

[node name="Creditos" type="Button" parent="."]
layout_mode = 0
offset_left = 599.0
offset_top = 290.0
offset_right = 699.0
offset_bottom = 311.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_x6frq")
volume_db = -30.874
autoplay = true

[node name="play" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5hdsg")
volume_db = 10.0

[node name="timPlay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="button_down" from="Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="Creditos" to="." method="_on_creditos_button_down"]
[connection signal="timeout" from="timPlay" to="." method="_on_tim_play_timeout"]
